# simulation_rust

./: .gitignore  Cargo.toml  README.md
examples/stock_sim/: Cargo.toml
examples/stock_sim/config/: aapl.toml  amd.toml  amzn.toml
examples/stock_sim/src/: agent.rs  main.rs
src/: functions.rs  lib.rs  traits.rs
tests/: test.rs
