[package]
name = "sim-rust"
version = "0.2.1"
description = "A simulation framework (WIP)"
authors = ["Mitchell Berendhuysen"]
edition = "2018"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"