[package]
name = "sim-rust"
version = "0.8.3"
description = "A simulation framework (WIP)"
authors = ["Mitchell Berendhuysen"]
edition = "2021"
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/MitchellBerend/simulation_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]