[package]
name = "sim-rust"
version = "0.8.4"
description = "A simulation framework (WIP)"
authors = ["Mitchell Berendhuysen"]
edition = "2021"
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/MitchellBerend/simulation_rust"

autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace] 
members = [
    "examples/*",
]

[dependencies]