[package]
name = "stock_sim"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "stock_sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sim-rust = "0.8.4"
config = "0.11"
serde = { version = "1.0.132", features = ["derive"] }
rand = "0.8.4"
rand_distr = "0.4.2"